# dnssec-validator

./: .gitignore  .gitmodules  Build  CHANGELOG  CMakeLists.txt  COPYING  MSVS-build.bat  Makefile.am  Makefile.freebsd  Makefile.in  Makefile.layout  Makefile.libwin  Makefile.libwin_old  Makefile.linux  Makefile.mac  Makefile.main  Makefile.static_libs  Makefile.unix  Makefile.win  aclocal.m4  authors.info  build_osx_fat.sh  configure  configure.ac  dnssec-validator_2.1.1+git651.orig.tar.xz.delta  dnssec-validator_2.1.1+git651.orig.tar.xz.id  install.rdf.in  install_osx_safari_add_payload.sh  install_osx_safari_stub.sh  xpi.sh
Doc/: DANE-TLSA_Validator_2.x-specification.odt  DNSSEC_Validator_2.0-specification.odt  DNSSEC_Validator_2.0_validation_flowchart.dia
add-on/chrome2dnssec/: options.html  options.js  popup.html
add-on/chrome2dnssec/_locales/cs/: messages.json
add-on/chrome2dnssec/_locales/en/: messages.json
add-on/chrome2tlsa/: detail-tlsa.html  options.html  options.js  popuptlsa.js
add-on/chrome2tlsa/_locales/cs/: messages.json
add-on/chrome2tlsa/_locales/de/: messages.json
add-on/chrome2tlsa/_locales/en/: messages.json
add-on/firefox/common/: README  about.template  build.sh  chrome.manifest  config_build.sh  install.rdf.template
add-on/firefox/common/defaults/preferences/: dnssec.js
add-on/firefox/common/locale/cs-CZ/: aboutwindow.dtd  dnssec.dtd  dnssec.preferences  dnssec.properties  prefwindow.dtd
add-on/firefox/common/locale/de-DE/: aboutwindow.dtd  dnssec.dtd  dnssec.preferences  dnssec.properties  prefwindow.dtd
add-on/firefox/common/locale/en-US/: aboutwindow.dtd  dnssec.dtd  dnssec.preferences  dnssec.properties  prefwindow.dtd
add-on/firefox/common/skin/: overlay-dnssec.css  overlay-tlsa.css  overlay-win-ff4.css  overlay.css
add-on/firefox/js-ctypes/content/: dnsseclib.js  dnsseclib.js.in  firefoxOverlay.xul  npapi_const.js  overlay.js  preferences.js  preferences.xul  tlsa.js  tlsalib.js  tlsalib.js.in
add-on/firefox/npapi/content/: about.js  firefoxOverlay.xul  overlay.js  preferences.js  preferences.xul  tlsa.js
add-on/ie2/: Build
add-on/ie2/DNSSECToolbar/: IEdnssec.sln  KBBar.aps  KBBar.cpp  KBBar.def  KBBar.dsp  KBBar.dsw  KBBar.h  KBBar.idl  KBBar.rc  KBBar.tlb  KBBar.vcxproj  KBBar.vcxproj.filters  KBBarBand.cpp  KBBarBand.h  KBBarBand.rgs  KBBar_i.c  KBBar_p.c  KBToolBarCtrl.cpp  KbToolBarCtrl.h  Resource.h  StdAfx.h  dlldata.c  hyperlink.cpp  hyperlink.h  stdbool.h
add-on/ie2/DNSSECToolbar/res/: RegDLL.bat  UnRegDLL.bat
add-on/ie2/NSIS installer/: authors.info  dnssec-setup.nsi
add-on/opera2dnssec/: background.js  detail-info.html  manifest.json.template  popup.js  popup2.js
add-on/opera2dnssec/_locales/de/: messages.json
add-on/opera2tlsa/: background.js  manifest.json.template  popuptlsa.html  popuptlsa2.js
add-on/safari2.safariextension/: Info.plist  Settings.plist  global.html
add-on/safari2.safariextension/js/: core.js  npapi.js
add-on/safari2.safariextension/locale/: dnssecmessages.js  tlsamessages.js
add-on/safari2.safariextension/popups/: default.html  defaultpopup.js  dnssecpopup.html  dnssecpopup.js  tlsapopup.html  tlsapopup.js
add-on/safari2.safariextension/toolbar/: toolbar.html
core_js-ctypes/: Makefile  libDANEcore.ver  libDNSSECcore.ver
debian/: README.Debian  README.source  changelog  control  copyright  dnssec-validator.cron.d.ex  dnssec-validator.default.ex  dnssec-validator.doc-base.EX  info  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
debian/patches/: 0001-Switch-patch-system-to-autotools.patch  0001-use_system_libraries.patch  0002-fix_cmake_paths.patch  series
plugin-source/: config.h.in
plugin-source/DNSSECValidatorPlugin/: CMakeLists.txt  DNSSECValidatorPlugin.cpp  DNSSECValidatorPlugin.h  DNSSECValidatorPluginAPI.cpp  DNSSECValidatorPluginAPI.h  Factory.cpp  PluginConfig.cmake  dnssec-plug.c  dnssec-plug.h  dnssec-states.gen
plugin-source/DNSSECValidatorPlugin/Chrome/chromepackage/: manifest.json
plugin-source/DNSSECValidatorPlugin/Mac/: projectDef.cmake
plugin-source/DNSSECValidatorPlugin/Win/: projectDef.cmake
plugin-source/DNSSECValidatorPlugin/Win/WiX/: DNSSECValidatorPlugin.ddf
plugin-source/DNSSECValidatorPlugin/X11/: projectDef.cmake
plugin-source/DNSSECValidatorPlugin/xpi/content/: chrome.manifest  install.rdf
plugin-source/TLSAValidatorPlugin/: CMakeLists.txt  Factory.cpp  PluginConfig.cmake  TLSAValidatorPlugin.cpp  TLSAValidatorPlugin.h  TLSAValidatorPluginAPI.cpp  TLSAValidatorPluginAPI.h  ca_store_directory.c  ca_store_nss.c  ca_store_osx.m  ca_store_win.c  ca_stores.h  dane-plug.c  dane-plug.h  dane-states.gen
plugin-source/TLSAValidatorPlugin/Chrome/chromepackage/: manifest.json
plugin-source/TLSAValidatorPlugin/Mac/: projectDef.cmake
plugin-source/TLSAValidatorPlugin/Win/: projectDef.cmake
plugin-source/TLSAValidatorPlugin/Win/WiX/: TLSAValidatorPlugin.ddf
plugin-source/TLSAValidatorPlugin/X11/: projectDef.cmake
plugin-source/TLSAValidatorPlugin/xpi/content/: chrome.manifest  install.rdf
plugin-source/common/: common.c  common.h  config_related.h  log.h  log_dflt.c  log_osx.m
tests/: Makefile  checkDANElib.c  checkDNSSEClib.c  list_libraries.sh  ssl-test.c  unbound-test-dnssec.c
